<?xml version="1.0"?>
<package format="2">
  <name>ntp_configuration</name>
  <version>0.0.0</version>
  <description>The ntp_configuration package</description>

  <maintainer email="masaya.kataoka@tier4.jp">Masaya Kataoka</maintainer>

  <license>Apache v2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-ntplib</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
